--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /YOLOX_outputs/
 /datasets/VOCdevkit
 /.vscode/
+/weights/
 **/__pycache__
 # do not ignore datasets under yolox/data
 !*/yolox/data/datasets/
